--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 appnope==0.1.4
 asttokens==2.4.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.1
-decorator==5.1.1
+decorator==4.4.2
 executing==2.0.1
+ffmpeg==1.4
 filelock==3.15.4
 fonttools==4.53.0
 fsspec==2024.6.0
 glcontext==2.5.0
+idna==3.7
+imageio==2.34.1
+imageio-ffmpeg==0.5.1
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
@@ -21,6 +27,7 @@ MarkupSafe==2.1.5
 matplotlib==3.9.0
 matplotlib-inline==0.1.7
 moderngl==5.10.0
+moviepy==1.0.3
 mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.3
@@ -31,23 +38,29 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
+proglog==0.1.10
 prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pygame==2.5.2
+PyGLM==2.7.1
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.0.3
+requests==2.32.3
+setuptools==70.1.0
 six==1.16.0
 stack-data==0.6.3
 sympy==1.12.1
 torch==2.3.1
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
 ujson==5.10.0
+urllib3==2.2.2
 wcwidth==0.2.13
